<resources>
    <string name="app_name">Semesterproject</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="login">Login</string>
</resources>